--- a/css/styles.css
+++ b/css/styles.css
@@ -769,9 +769,18 @@ button .hero {
     background: #FFFFFF;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
+    padding: 40px;
 }
 .modal-close {
+}
+.modal p {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
 }
 
 .modal .modal-close {
@@ -790,9 +799,31 @@ button .hero {
     align-items: center;
 }
 
-.modal .comment {
-    resize: none;
+.modal-form .modal-form-field {
+    display: block;
+
 }
 
 
+.modal-form-input-desk {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    margin-bottom: 4px;
+    color: #757575;
+}
 
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    margin-bottom: 10px;
+}
+
+.modal .comment {
+    resize: none;
+}
