--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --brand-color: #2196F3;
     --text-color: #FFFFFF;
     --logo-color: #000000;
+    --o-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -814,6 +815,10 @@ button .hero {
     margin-bottom: 4px;
     color: #757575;
 }
+.modal-form-input-wrapper {
+    display: block;
+    position: relative;
+}
 
 .modal-form-input {
     width: 100%;
@@ -822,8 +827,40 @@ button .hero {
     border-radius: 4px;
     padding-left: 42px;
     margin-bottom: 10px;
+    transition: border-color var(--o-animation);
+}
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--brand-color);
 }
 
-.modal .comment {
+.modal .modal-form-massage {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     resize: none;
+    transition: border-color var(--o-animation);
+}
+.modal .modal-form-massage::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    
+}
+.modal-form-input-icon {
+    position: absolute;
+    left: 12px;
+    top: 11px;
+    transition: fill var(--o-animation);
+}
+.modal-form-input:focus + .modal-form-input-icon {
+    fill: var(--brand-color);
+}
+.modal .modal-form-massage:focus {
+    outline: none;
+    border-color: var(--brand-color);
 }
