--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,8 @@ body {
     margin: 0 auto;
     padding: 10px 32px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color: transparent;
+    border-radius: 4px;
 }
 button .hero {
     padding: 10px;
@@ -750,7 +752,72 @@ button .hero {
     background-image: url(../images-2/Ellipse.svg);
     background-position: 50% 50%;
 }
-
+.footer-title {
+    margin-top: 72px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+.futter-form {
+    display: flex;
+    margin-left: 93px;
+    text-align: center;
+    justify-content: center;
+}
+.footer-form-input-wrapper {
+    position: relative;
+}
+.footer-form-submit:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.footer-form-submit {
+    
+    display: block;
+    width: 200px;
+    height: 50px;
+    background: var(--brand-color);
+    border: transparent;
+    border-radius: 4px;
+    margin-left: 10px;
+    color: var(--text-color);
+    padding-right: 62px;
+}
+.footer-form-input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 16px 15px;
+    transition: border-color var(--o-animation);
+}
+.footer-form-input:placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    margin-left: 16px;
+}
+.footer-form-input-icon {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 12px;
+    left: 148px;
+    fill: var(--text-color);
+    
+}
+.footer-form-input:focus {
+    outline: none;
+    border-color: var(--brand-color);
+}
 
 /* <-- modal-view --> */
 
@@ -808,6 +875,10 @@ button .hero {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     align-items: center;
+}
+.modal .modal-close:hover,
+.modal .modal-close:focus {
+    fill: var(--brand-color);
 }
 
 .modal-form .modal-form-field {
@@ -907,5 +978,24 @@ button .hero {
     outline: none;
 }
 .modal-form-check:focus + .modal-form-check-desc::before {
-    outline: 2px solid var(--brand-color);
+    border: 1px solid var(--brand-color);
+    outline: #2196F3;
+}
+.modal-form-submit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 200px;
+    min-height: 50px;
+    background: #188CE8;
+    border-radius: 4px;
+    color: var(--text-color);
+    border-color: transparent;
+}
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: var(--text-color);   
 }
