--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ body {
     display: block;
     margin: 0 auto;
     padding: 10px 32px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: transparent;
     border-radius: 4px;
 }
@@ -265,7 +265,7 @@ button .hero {
 .hero-btn:hover,
 .hero-btn:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
     border-radius: 4px;
     background-color: #188CE8;
 }
