--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ body {
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header .header-list-back {
@@ -468,7 +468,7 @@ button .hero {
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 1;
-    background-color: rgba(33, 150, 243, 0.9);;
+    background-color: rgba(77, 90, 229, 0.9);
 }
 .some-item-thumb  {
     /* position: relative; */
