--- a/css/styles.css
+++ b/css/styles.css
@@ -223,11 +223,12 @@ body {
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
+    
     color: var(--text-color);
     margin-bottom: 30px;
 }
 .hero {
+    position: relative;
     padding-top: 200px;
     padding-bottom: 200px;
     align-content: center;
@@ -239,7 +240,16 @@ body {
     max-width: 1440px;
     max-height: 600px;
 }
-
+.hero-bcg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.7);
+    top: 0;
+}
+.hero-container {
+    position: relative;
+}
 
 .hero-btn {
     font-weight: 700;
@@ -307,7 +317,7 @@ button .hero {
     align-items: center;
     justify-content: center;
     background-color: #F5F4FA;
-    margin-bottom: 30px;
+    margin-bottom: 8px;
 }
 .icon-about {
     display: flex;
@@ -337,7 +347,7 @@ button .hero {
     
     position: absolute;
 }
-.section-img p {
+/* .section-img p {
     position: relative;
     width: 370px;
     height: 70px;
@@ -353,7 +363,7 @@ button .hero {
 .section-img p {
     text-align: center;
     padding-top: 27px ;
-}
+} */
 
 /* Чим займається кожен з команди */
 .section h2 {
@@ -596,8 +606,8 @@ button .hero {
 .regular-customers {
     width: inherit;
     /* height: 184px; */
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .regular-customers h2 {
     font-weight: 700;
@@ -695,8 +705,8 @@ button .hero {
     font-style: normal; 
 }
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    /* padding-top: 60px;
+    padding-bottom: 60px; */
 }
 .logo-footer {
     display: block;
@@ -728,6 +738,15 @@ button .hero {
     text-align: left;
     margin-right: 60px;
 }
+.container-left p {
+    /* font-family: 'Roboto'; */
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #E7E9FC;
+    padding-bottom: 70px;
+}
 /* .contaainer-right {
     align-items: baseline;
 } */
@@ -736,7 +755,7 @@ button .hero {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    text-transform: uppercase;
+    
     color: var(--text-color);
     margin-bottom: 20px;
     text-align: left;
@@ -748,31 +767,35 @@ button .hero {
     justify-content: center;
     margin-right: 10px;
     fill: var(--text-color);
-    background: 50% 50%;
-    background-image: url(../images-2/Ellipse-2.svg);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: rgba(66, 67, 85, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* color: #AFB1B8; */
+    border-radius: 50px;
 }
 
 .container-right .icon-team a:hover,
 .container-right .icon-team a:focus {
-    fill: var(--text-color);
     background-repeat: no-repeat;
-    background-image: url(../images-2/Ellipse.svg);
-    background-position: 50% 50%;
+    fill: #4D5AE5;
+    fill: var(--text-color);
+    border-radius: 50px;
+    background-color: var(--brand-color);
+}
+.container-footer-title {
+    padding-top: 100px;
 }
 .footer-title {
-    margin-top: 72px;
+    
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: var(--text-color);
 }
 .futter-form {
     display: flex;
-    margin-left: 93px;
+    padding-left: 93px;
     text-align: center;
     justify-content: center;
 }
@@ -995,14 +1018,14 @@ button .hero {
     margin-right: auto;
     min-width: 200px;
     min-height: 50px;
-    background: #188CE8;
+    background: var(--brand-color);
     border-radius: 4px;
     color: var(--text-color);
     border-color: transparent;
 }
 .modal-form-submit:hover,
 .modal-form-submit:focus {
-    background: #188CE8;
+    background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: var(--text-color);   
