--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,13 @@ body {
 /* header */
 /* .header-about {
 } */
+
 .header-container {
     display: flex;
     align-items: center;
     background-color: var(--text-color);
-    
+    margin: 0;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header li {
     /* margin-right: 50px; */
@@ -114,7 +116,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 .visually-hidden {
     position: absolute;
@@ -173,7 +175,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 .posted {
     justify-content: flex-end;
