--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
     color: var(--brand-color);
     text-decoration: none;
     display: block;
-    margin-right: 93px;
+    margin-right: 77px;
 }
 
 .web {
@@ -62,16 +62,19 @@ body {
 /* header */
 /* .header-about {
 } */
-
+.header-link {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 .header-container {
+    
     display: flex;
     align-items: center;
     background-color: var(--text-color);
     margin: 0;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    
 }
 .header li {
-    /* margin-right: 50px; */
+    margin-right: 50px;
     
 }
 .header a {
@@ -86,12 +89,14 @@ body {
     padding-bottom: 32px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.header-list {
+    border-bottom: 2px var(--brand-color);
+}
 .header .header-list-back {
     margin-right: 0;
     
 }
-.header-link-border {
+/* .header-link-border {
     position: absolute;
     display: flex;
     bottom: -31px;
@@ -99,20 +104,20 @@ body {
     height: 4px;
     background-color: #188CE8;
     border-radius: 2px;
-    opacity: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    /* opacity: 0; */
+    /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+/* } */ */
 .header-animation {
-    margin-right: 50px;
+    margin-right: 40px;
     
 }
-.header-animation:hover .header-link-border {
+/* .header-animation:hover .header-link-border {
     opacity: 1;
-}
+} */
  
 
 .container {
-    width: 1200px;
+    width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -132,7 +137,7 @@ body {
     display: block;
     display: flex;
     align-items: center;
-    margin-right: 50px;
+    /* margin-right: 50px; */
 }
 
 .posted a {
@@ -160,7 +165,7 @@ body {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .posted li {
-    margin-right: 50px;
+    margin-right: 40px;
 }
 .posted .link-mailto {
     margin-right: 0;
@@ -172,14 +177,16 @@ body {
     /* align-items: center; */
 }
 .container-posted {
-    padding-left: 15px;
+    padding-left: 215px;
     padding-right: 15px;
     margin: 0 auto;
     /* outline: 2px solid red; */
 }
 .posted {
+    display: flex;
     justify-content: flex-end;
     text-align: center;
+    margin-left: auto;
 }
 .posted a:hover,
 .posted a:focus,
@@ -189,7 +196,7 @@ body {
     /* fill: var(--brand-color); */
 }
 
-.posted .posted-icon {
+/* .posted .posted-icon {
     display: block;
     align-self: center;
     margin-right: 10px;
@@ -202,7 +209,7 @@ body {
 }
 .posted .posted-icon use {
     fill: currentColor;
-}
+} */
 
 .current::after {
     content: '';
@@ -233,7 +240,7 @@ body {
     position: relative;
     padding-top: 200px;
     padding-bottom: 200px;
-    align-content: center;
+    /* align-content: center; */
     margin-right: auto;
     margin-left: auto;
     /* background: rgba(47, 48, 58, 0.4); */
@@ -451,7 +458,7 @@ button .hero {
     border-radius: 4px;
 }
 .hero-portfolio {
-    padding-top: 94px;
+    padding-top: 96px;
     padding-bottom: 50px;
 }
 .hero-portfolio-link {
@@ -463,11 +470,11 @@ button .hero {
 }
 .list-portfolio {
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 24px;
     
 }
 .some-item {
-    
+    width: 360px;
 }
 .list-portfolio .some-item-container:hover,
 .list-portfolio .some-item-container:focus {
