--- a/css/styles.css
+++ b/css/styles.css
@@ -46,10 +46,14 @@ body {
 /* Logo */
 .logo {
     font-family: 'Raleway',sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    display: flex;
+    align-items: center;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: var(--brand-color);
     text-decoration: none;
     display: block;
@@ -79,9 +83,10 @@ body {
 }
 .header a {
     display: block;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #212121;
     text-decoration: none;
@@ -586,8 +591,9 @@ button .hero {
     align-items: center;
     justify-content: center;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #AFB1B8;
+    color: #F4F4FD;
     border-radius: 50px;
+    background-color: var(--brand-color);
     /* margin: 0 auto; */
 }
 .team .icon-team .icon-team-elements {
@@ -600,7 +606,7 @@ button .hero {
     background-repeat: no-repeat;
     fill: #4D5AE5;
     border-radius: 50px;
-    background-color: var(--brand-color);
+    background-color: #5e69e0;
     /* background-image: url(../images-2/Ellipse.svg);  */
     /* background-position: -50%, -50%; */
 }
@@ -776,7 +782,7 @@ button .hero {
     justify-content: center;
     margin-right: 10px;
     fill: var(--text-color);
-    background-color: rgba(66, 67, 85, 1);
+    background-color: rgba(25, 25, 25, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     /* color: #AFB1B8; */
     border-radius: 50px;
@@ -788,7 +794,7 @@ button .hero {
     fill: #4D5AE5;
     fill: var(--text-color);
     border-radius: 50px;
-    background-color: var(--brand-color);
+    background-color: #31D0AA;
 }
 .container-footer-title {
     padding-top: 100px;
@@ -882,8 +888,8 @@ button .hero {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-height: 581px;
-    min-width: 528px;
+    min-height: 579px;
+    min-width: 408px;
     background: #FFFFFF;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
