--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ body {
 /* Logo */
 .logo {
     font-family: 'Raleway',sans-serif;
-    font-style: normal;
+    /* font-style: normal; */
     font-weight: 800;
     font-size: 18px;
     line-height: 1.33;
@@ -83,12 +83,12 @@ body {
 }
 .header a {
     display: block;
-    font-style: normal;
+    /* font-style: normal; */
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #212121;
+    color: #2E2F42;
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -148,6 +148,11 @@ body {
 .posted a {
     padding-top: 32px;
     padding-bottom: 32px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 }
 /* .link-mailto a { */
     
@@ -231,13 +236,17 @@ body {
 .footer {
     background-color: #2E2F42;
 }
+.footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 .hero-main {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 56px;
+    line-height: 1.07;
     text-align: center;
-    letter-spacing: 0.06em;
-    
+    letter-spacing: 0.02em;
     color: var(--text-color);
     margin-bottom: 30px;
 }
@@ -266,17 +275,19 @@ body {
 }
 
 .hero-btn {
-    font-weight: 700;
+    /* font-style: normal; */
+    font-weight: 600;
     font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    font-family: inherit;
+    line-height: 1.19;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
     cursor: pointer;
     background-color: var(--brand-color);
     color: var(--text-color);
     display: block;
     margin: 0 auto;
-    padding: 10px 32px;
+    padding: 16px 32px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: transparent;
     border-radius: 4px;
@@ -303,11 +314,11 @@ button .hero {
 
 /* Опис проєктів */
 .about h3 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 }
 .about  {
     padding-top: 94px;
@@ -316,13 +327,14 @@ button .hero {
     display: flex;
 }
 .list-title {
+    /* font-style: normal; */
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #757575;
     margin-top: 4px;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 .about .container-about {
     width: 270px;
@@ -345,17 +357,18 @@ button .hero {
 }
 
 .list-project {
+    /* font-style: normal; */
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #757575;
     margin-top: 10px;
     /* margin-right: 30px; */
 }
 
 .section-img li {
-    padding-right: 30px;
+    margin-right: 30px;
 }
 .section-img-link {
     
@@ -381,11 +394,13 @@ button .hero {
 
 /* Чим займається кожен з команди */
 .section h2 {
-    font-weight: 700;
+    /* font-style: normal; */
+    font-weight: 600;
     font-size: 36px;
-    line-height: 1.16;
+    line-height: 1,11;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
     margin-bottom: 50px;
 }
 .section .container {
@@ -393,11 +408,12 @@ button .hero {
     margin-bottom: 94px;
 }
 .list-names {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
     padding-top: 30px;
     margin-bottom: 10px;
 }
@@ -407,35 +423,43 @@ button .hero {
 
 
 .list-team {
+    /* font-style: normal; */
+    font-weight: 400;
     font-size: 16px;
-    line-height: 1.18;
+    line-height: 1.5;
     text-align: center;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.02em;
     color: #757575;
     padding-bottom: 16px;
 }
 
 /* Hero-portfolio */
 .hero-portfolio button {
-    font-weight: 500;
+    /* font-style: normal; */
+    font-weight: 600;
     font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
     font-family: inherit;
     cursor: pointer;
     background-color: #F5F4FA;
     padding: 6px 25px
     
 }
+.container .hero-portfolio-link li {
+    margin-right: 8px;
+}
 .container .hero-portfolio-link button {
     display: block;
     display: flex;
     margin: 0 auto;
-    margin-right: 8px;
+    /* margin-right: 8px; */
     border-radius: 4px;
     border: 0;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
 }
 
 .list li a{
@@ -461,6 +485,7 @@ button .hero {
     color: var(--text-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    border: transparent;
 }
 .hero-portfolio {
     padding-top: 96px;
@@ -492,7 +517,7 @@ button .hero {
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 1;
-    background-color: rgba(77, 90, 229, 0.9);
+    background-color: rgba(77, 90, 229, 1);
 }
 .some-item-thumb  {
     /* position: relative; */
@@ -500,12 +525,14 @@ button .hero {
 
 }
 .headlines {
-    font-size: 18px;
-    line-height: 2.0;
-    letter-spacing: 0.06em;
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #212121;
     cursor: pointer;
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 .list-portfolio li a  {
     position: relative;
@@ -518,7 +545,7 @@ button .hero {
     width: inherit;
     border: 1px solid #EEEEEE;
     border-top: 0;
-    
+    padding: 32px 16px;
     /* border-top: 0; */
 }
 .list-portfolio-link {
@@ -530,10 +557,10 @@ button .hero {
     transform: translate(-50%, -50%);
     width: 370px;
     height: 100%;
-    align-items: center;
-    justify-content: center;
-    padding-left: 24px;
-    padding-right: 24px;
+    /* align-items: center;
+    justify-content: center; */
+    padding: 40px 32px;
+    /* backgr
     /* background: transparent; */
     opacity: 0;
     overflow: hidden ;   
@@ -542,10 +569,11 @@ button .hero {
 
 
 .list-portfolio-link p {
+    /* font-style: normal; */
     font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #FFFFFF;
 }
 .section .container {
@@ -606,7 +634,7 @@ button .hero {
     background-repeat: no-repeat;
     fill: #4D5AE5;
     border-radius: 50px;
-    background-color: #5e69e0;
+    background-color: #1021e1;
     /* background-image: url(../images-2/Ellipse.svg);  */
     /* background-position: -50%, -50%; */
 }
@@ -675,7 +703,7 @@ button .hero {
 /* Футер */
 .footer .logo-footer {
     font-family: 'Raleway';
-    font-style: normal;
+    /* font-style: normal; */
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -745,7 +773,7 @@ button .hero {
 }
 .footer .container {
     display: flex;
-    text-align: center;
+    /* text-align: center; */
     padding-bottom: 30px;
     align-items: baseline;
 }
@@ -755,22 +783,24 @@ button .hero {
 }
 .container-left p {
     /* font-family: 'Roboto'; */
+    width: 264px;
+    /* font-style: normal; */
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #E7E9FC;
-    padding-bottom: 70px;
+    /* padding-bottom: 70px; */
 }
 /* .contaainer-right {
     align-items: baseline;
 } */
 .footer-rigth-title{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;  
     color: var(--text-color);
     margin-bottom: 20px;
     text-align: left;
@@ -797,15 +827,16 @@ button .hero {
     background-color: #31D0AA;
 }
 .container-footer-title {
-    padding-top: 100px;
+    /* padding-top: 100px; */
 }
 .footer-title {
-    
+    margin-left: 93px;
     margin-bottom: 20px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
+    /* font-style: normal; */
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--text-color);
 }
 .futter-form {
@@ -821,6 +852,11 @@ button .hero {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .footer-form-submit {
+    /* font-style: normal; */
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.06em;
     
     display: block;
     width: 200px;
@@ -840,6 +876,8 @@ button .hero {
     border-radius: 4px;
     padding: 16px 15px;
     transition: border-color var(--o-animation);
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.6);
 }
 .footer-form-input:placeholder {
     font-weight: 400;
