--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ body {
     
 }
 .header li {
+    position: relative;
     margin-right: 40px;
     
 }
@@ -96,27 +97,29 @@ body {
 }
 .header-list {
     border-bottom: 2px var(--brand-color);
+    ;
 }
 .header .header-list-back {
     margin-right: 0;
     
 }
-/* .header-link-border {
+.header-link-border {
     position: absolute;
     display: flex;
-    bottom: -31px;
+    bottom: 0px;
     width: 100%;
     height: 4px;
     background-color: #188CE8;
     border-radius: 2px;
-    /* opacity: 0; */
-    /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-/* } */ */
+    opacity: 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .header-animation {
     margin-right: 40px;
     
 }
-/* .header-animation:hover .header-link-border {
+/* .header-list .link:hover .header-link-border {
     opacity: 1;
 } */
  
@@ -162,7 +165,7 @@ body {
 .header a:focus {
     color:var(--brand-color);
 }
-.header a:active .header-link-border{
+.header a:hover ~ .header-link-border {
     opacity: 1;
 }
 .posted a {
@@ -224,6 +227,7 @@ body {
 
 .current::after {
     content: '';
+    
     display: block;
     width: 100%;
     border-radius: 2px;
@@ -452,7 +456,7 @@ button .hero {
     
 }
 .hero-portfolio-button li {
-    margin-right: 8px;
+    margin-right: 24px;
 }
 .hero-portfolio-button li:last-child {
     margin-right: 0;
@@ -464,7 +468,7 @@ button .hero {
     
     border-radius: 4px;
     border: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     color: var(--brand-color);
@@ -506,7 +510,7 @@ button .hero {
 }
 .list-portfolio {
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 48px 24px;
     
 }
 .some-item {
@@ -521,7 +525,7 @@ button .hero {
 .list-portfolio-cards:hover .list-portfolio-link,
 .list-portfolio-cards:focus .list-portfolio-link {
     top: 50%;
-    left: 50%;
+    
     transform: translate(-50%, -50%);
     opacity: 1;
     background-color: rgba(77, 90, 229, 1);
@@ -600,7 +604,7 @@ button .hero {
     letter-spacing: 0.03em;
     margin-bottom: 50px;
 }
-.team li {
+.section-team-cards {
     background-color: var(--text-color);
     width: 264px;
     margin-right: 24px;
@@ -632,7 +636,7 @@ button .hero {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #F4F4FD;
     border-radius: 50px;
     background-color: var(--brand-color);
@@ -646,7 +650,7 @@ button .hero {
     color: #FFFFFF;
     /* background-color: #2196F3; */
     background-repeat: no-repeat;
-    fill: #4D5AE5;
+    fill: #404BBF;
     border-radius: 50px;
     background-color: #1021e1;
     /* background-image: url(../images-2/Ellipse.svg);  */
@@ -692,7 +696,7 @@ button .hero {
     align-items: center;
     justify-content: center;
     fill: #AFB1B8;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     /* padding: 16px 32px; */
     
 }
@@ -874,12 +878,12 @@ button .hero {
 }
 .footer-form-submit {
     /* font-style: normal; */
+    display: flex;
+    align-items: center;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.06em;
-    
-    display: block;
     width: 168px;
     height: 40px;
     background: var(--brand-color);
@@ -887,7 +891,8 @@ button .hero {
     border-radius: 4px;
     margin-left: 10px;
     color: var(--text-color);
-    padding-right: 62px;
+    
+    justify-content: space-around;
 }
 .footer-form-input {
     width: 264px;
@@ -895,7 +900,7 @@ button .hero {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    padding: 16px 15px;
+    padding: 8px 16px;
     transition: border-color var(--o-animation);
     background-color: transparent;
     color: rgba(255, 255, 255, 0.6);
@@ -911,11 +916,11 @@ button .hero {
     margin-left: 16px;
 }
 .footer-form-input-icon {
-    position: absolute;
+    /* position: absolute; */
     width: 24px;
     height: 24px;
-    top: 12px;
-    left: 148px;
+    /* top: 12px; */
+    /* left: 148px; */
     fill: var(--text-color);
     
 }
@@ -933,7 +938,7 @@ button .hero {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);;    
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
     opacity: 0;
