--- a/css/styles.css
+++ b/css/styles.css
@@ -93,17 +93,22 @@ body {
     text-decoration: none;
     padding-top: 24px;
     padding-bottom: 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list {
     border-bottom: 2px var(--brand-color);
-    ;
+    position: relative;
+    
 }
+.links {
+    
+}
+
 .header .header-list-back {
     margin-right: 0;
     
 }
-.header-link-border {
+/* .header-link-border {
     position: absolute;
     display: flex;
     bottom: 0px;
@@ -113,7 +118,7 @@ body {
     border-radius: 2px;
     opacity: 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .header-animation {
     margin-right: 40px;
@@ -165,9 +170,7 @@ body {
 .header a:focus {
     color:var(--brand-color);
 }
-.header a:hover ~ .header-link-border {
-    opacity: 1;
-}
+
 .posted a {
     font-weight: 500;
     font-size: 14px;
@@ -225,13 +228,19 @@ body {
     fill: currentColor;
 } */
 
+
 .current::after {
     content: '';
-    
+    position: absolute;
+    bottom: 0;
     display: block;
+    
     width: 100%;
+    height: 4px;
     border-radius: 2px;
-    background-color: var(--brand-color);   
+    background-color: var(--brand-color);
+    opacity: 1;
+    
 }
 
 
@@ -257,7 +266,7 @@ body {
 }
 .hero {
     position: relative;
-    padding-top: 200px;
+    padding-top: 188px;
     padding-bottom: 200px;
     /* align-content: center; */
     margin-right: auto;
@@ -293,7 +302,7 @@ body {
     background-color: var(--brand-color);
     color: var(--text-color);
     padding: 16px 32px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: transparent;
     border-radius: 4px;
 }
@@ -325,8 +334,8 @@ button .hero {
     color: #2E2F42;
 }
 .about  {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 120px;
+    padding-bottom: 120px;
     /* display: block;
     display: flex; */
 }
@@ -371,6 +380,9 @@ button .hero {
     margin-top: 10px;
     /* margin-right: 30px; */
 }
+.section-description {
+    padding-bottom: 120px;
+}
 
 .section-img li {
     margin-right: 24px;
@@ -401,7 +413,7 @@ button .hero {
 } */
 
 /* Чим займається кожен з команди */
-.section h2 {
+.section-description-text {
     /* font-style: normal; */
     font-weight: 600;
     font-size: 36px;
@@ -409,7 +421,7 @@ button .hero {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    margin-bottom: 50px;
+    margin-bottom: 72px;
 }
 .section .container {
     /* padding-top: 94px; */
@@ -593,8 +605,8 @@ button .hero {
 }
 .section-team {
     background-color: #F5F4FA;
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .section-team h2 {
     font-weight: 700;
@@ -602,7 +614,7 @@ button .hero {
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
+    margin-bottom: 72px;
 }
 .section-team-cards {
     background-color: var(--text-color);
@@ -650,9 +662,9 @@ button .hero {
     color: #FFFFFF;
     /* background-color: #2196F3; */
     background-repeat: no-repeat;
-    fill: #404BBF;
+    fill: #F4F4FD;
     border-radius: 50px;
-    background-color: #1021e1;
+    background-color: #404BBF;
     /* background-image: url(../images-2/Ellipse.svg);  */
     /* background-position: -50%, -50%; */
 }
@@ -707,7 +719,7 @@ button .hero {
 .regular-customers ul li a:hover,
 .regular-customers ul li a:focus {
     /* background-color: #2196F3; */
-    border: 1px solid var(--brand-color);
+    border-color: var(--brand-color);
     border-radius: 4px;
     fill: var(--brand-color);
 }
