--- a/css/styles.css
+++ b/css/styles.css
@@ -516,7 +516,7 @@ button .hero {
     padding-bottom: 120px;
 }
 .hero-portfolio-button {
-    padding-bottom: 72px;
+    margin-bottom: 72px;
     display: flex;
     justify-content: center;
 }
