--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,8 @@ body {
     margin-right: 40px;
     
 }
-.header a {
+.header-links {
+    position: relative;
     display: block;
     /* font-style: normal; */
     font-weight: 600;
@@ -93,16 +94,14 @@ body {
     text-decoration: none;
     padding-top: 24px;
     padding-bottom: 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list {
     border-bottom: 2px var(--brand-color);
-    position: relative;
+    
     
 }
-.links {
-    
-}
+
 
 .header .header-list-back {
     margin-right: 0;
@@ -166,8 +165,8 @@ body {
 /* .link-mailto a { */
     
 
-.header a:hover,
-.header a:focus {
+.header-links:hover,
+.header-links:focus {
     color:var(--brand-color);
 }
 
@@ -240,7 +239,6 @@ body {
     border-radius: 2px;
     background-color: var(--brand-color);
     opacity: 1;
-    
 }
 
 
@@ -950,10 +948,11 @@ button .hero {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);;    
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 }
 .modal-info {
